apps/observability/base/resources/jaeger/virtual-service.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: virtualservice-jaeger
spec:
  hosts:
    - jaeger.infra.home.arpa
    - jaeger-collector.infra.home.arpa
  gateways:
    - gateway-jaeger
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jaeger-query.observability.svc.cluster.local
            port:
              number: 16686
    - match:
        - uri:
            prefix: /collector
      route:
        - destination:
            host: jaeger-collector.observability.svc.cluster.local
            port:
              number: 4317
